// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES THEME NATIVE 1`] = `
<div>
  <div
    data="REACTANY"
  >
    <div
      data="REACTANY"
      style="font-weight: bold; color: black;"
      trace="
fontWeight: bold /*TestComponent.sheet.label[1]*/
backgroundColor: lightblue /*TestComponent.sheet.label[0]*/
color: black /*TestComponent.sheet.label[0]*/"
    >
      Default Theme
    </div>
    <div
      data="REACTANY"
      style="font-weight: bold; background-color: blue; color: black;"
      trace="
fontWeight: bold /*TestComponent.sheet.label[1]*/
backgroundColor: blue /*TestComponent.sheet.label[0]*/
color: black /*TestComponent.sheet.label[0]*/"
    >
      Custom Theme
    </div>
  </div>
</div>
`;

exports[`WITH STYLES THEME WEB 1`] = `
<div>
  <div
    data="REACTANY"
  >
    <div
      class="c b a"
      data="REACTANY"
      trace="
.c { font-weight:bold /*TestComponent.sheet.label[1]*/ }
.b { background-color:lightblue /*TestComponent.sheet.label[0]*/ }
.a { color:black /*TestComponent.sheet.label[0]*/ }"
    >
      Default Theme
    </div>
    <div
      class="c d a"
      data="REACTANY"
      trace="
.c { font-weight:bold /*TestComponent.sheet.label[1]*/ }
.d { background-color:blue /*TestComponent.sheet.label[0]*/ }
.a { color:black /*TestComponent.sheet.label[0]*/ }"
    >
      Custom Theme
    </div>
  </div>
</div>
`;
